Fix UI, add correct fonts

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -28,7 +28,7 @@
     "password" : "Password",
     "forgotPassword" : "Forgot password?",
     "login" : "Login",
-    "dontHaveAccount" : "Dont't have account?",
+    "dontHaveAccount" : "Don't have account?",
     "signUp" : "Sign Up",
     "or" : "Or",
     "signUpWithGG" : "Sign up with Google",
