--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -34,5 +34,9 @@
     "signUpWithGG" : "Sign up with Google",
     "signUpWithApple" : "Sign up with Apple",
     "emailInvalid": "Email Invalid",
-    "thisFieldIsNotEmpty": "This field is not empty"
+    "thisFieldIsNotEmpty": "This field is not empty",
+    "enterYourName": "Enter your name",
+    "enterYourEmail": "Enter your email",
+    "createYourPassword": "Create your password",
+    "alreadyHaveAccount": "Already have account" 
 }
