--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -38,5 +38,6 @@
     "enterYourName": "Enter your name",
     "enterYourEmail": "Enter your email",
     "createYourPassword": "Create your password",
-    "alreadyHaveAccount": "Already have account" 
+    "alreadyHaveAccount": "Already have account?",
+    "pk3076889": "pk3076889@gmail.co"
 }
