Add nav bottom and AppBar

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -39,5 +39,8 @@
     "enterYourEmail": "Enter your email",
     "createYourPassword": "Create your password",
     "alreadyHaveAccount": "Already have account?",
-    "pk3076889": "pk3076889@gmail.co"
+    "pk3076889": "pk3076889@gmail.co",
+    "home": "Home",
+    "hello": "Hello",
+    "weekOfPregnancy": "Week of Pregnancy"
 }
