move hard code into .arb file

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -73,5 +73,8 @@
     "quiz": "Quiz",
     "articles": "Articles",
     "videos": "Videos",
-    "food": "Food"
+    "food": "Food",
+    "safeBump": "SafeBump",
+    "failed":"Failed",
+    "yourBabySizeofpear": "Your baby is the size of a pear"
 }
