Add ui add baby screen

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -98,5 +98,6 @@
     "birthExperience": "Birth experience",
     "cSection": "C section",
     "normal": "Normal",
-    "kg": "kg"
+    "kg": "kg",
+    "pleaseAddYourBaby": "Please add information about your baby!!"
 }
