--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -103,5 +103,6 @@
     "safeBump": "SafeBump",
     "failed":"Failed",
     "yourBabySizeofpear": "Your baby is the size of a pear",
-    "yourSignInIsSInvalid": "Your sign in is invalid"
+    "yourSignInIsSInvalid": "Your sign in is invalid",
+    "testYourKnowledge" : "Test your knowledge"
 }
