--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -104,5 +104,8 @@
     "failed":"Failed",
     "yourBabySizeofpear": "Your baby is the size of a pear",
     "yourSignInIsSInvalid": "Your sign in is invalid",
-    "testYourKnowledge" : "Test your knowledge"
+    "testYourKnowledge" : "Test your knowledge",
+    "amazing":"Amazing!",
+    "dontWorry": "Don't worry. You can do it later!",
+    "percent": "%"
 }
