--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -107,5 +107,8 @@
     "testYourKnowledge" : "Test your knowledge",
     "amazing":"Amazing!",
     "dontWorry": "Don't worry. You can do it later!",
-    "percent": "%"
+    "percent": "%",
+    "tryAgain": "Try again",
+    "calendar": "Calendar",
+    "notesCreated": "Notes Created"
 }
