Add logic change day change notes

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -110,5 +110,8 @@
     "percent": "%",
     "tryAgain": "Try again",
     "calendar": "Calendar",
-    "notesCreated": "Notes Created"
+    "notesCreated": "Notes Created",
+    "time": "Time: ",
+    "hospital": "Hospital: ",
+    "medicine": "Medicine: "
 }
