add logic create and delete note

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -113,5 +113,9 @@
     "notesCreated": "Notes Created",
     "time": "Time: ",
     "hospital": "Hospital: ",
-    "medicine": "Medicine: "
+    "medicine": "Medicine: ",
+    "addYourNote": "Add your note",
+    "title": "Title",
+    "detail": "Detail",
+    "create": "Create"
 }
