--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -131,5 +131,10 @@
     "metric": "Metric",
     "done": "Done",
     "height": "Height",
-    "weight": "Weight"
+    "weight": "Weight",
+    "privacyPolicy": "Privacy policy",
+    "termsAndConditions": "Terms and conditions",
+    "rateSafeBump": "Rate SafeBump App",
+    "version": "Version",
+    "understood": "Understood"
 }
