--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -131,5 +131,12 @@
     "metric": "Metric",
     "done": "Done",
     "height": "Height",
-    "weight": "Weight"
+    "weight": "Weight",
+    "units":"Units",
+    "account": "Account",
+    "language": "Language",
+    "english": "English",
+    "deleteAccount": "Delete account",
+    "lbFt": "lb | ft",
+    "kgCm": "kg | cm"
 }
