Show detail article and video

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -158,5 +158,6 @@
     "select": "Select",
     "areYouSureYouWant": "Are you sure you want to delete?",
     "deleteMyAccount": "Delete my account",
-    "areYouSureYouWantSignOut": "Are you sure you want to sign out?"
+    "areYouSureYouWantSignOut": "Are you sure you want to sign out?",
+    "back": "Back"
 }
