Show all medication page

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -166,5 +166,26 @@
     "doTheTestAgain": "Do the test again",
     "maybeLater": "Maybe later", 
     "previous": "Previous",
-    "finish": "Finish"
+    "finish": "Finish",
+    "addAMedication": "Add a medication",
+    "whatMedicationWillYouTake" : "What medication will you take?",
+    "medicationName": "Medication name",
+    "dose": "Dose",
+    "unit": "Unit(s)",
+    "notes": "Notes",
+    "addYourNotesHere": "Add your notes here",
+    "doYouWantToSetReminder": "Do you want to set reminder?",
+    "set": "Set", 
+    "setReminder": "Set reminder",
+    "howOftenDoYouTakeDose": "How often do you take dose?",
+    "frequency": "Frequency",
+    "everyDay": "Everyday",
+    "timeToTake": "Time to take",
+    "addATime": "Add a time",
+    "addMore": "Add more",
+    "enterMedicationName": "Enter medication name ...",
+    "medication": "Medication",
+    "setupMedication": "Setup medication",
+    "setupNow":"Setup now",
+    "noMedication": "No medication"
 }
