Add medication logic

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -171,7 +171,7 @@
     "whatMedicationWillYouTake" : "What medication will you take?",
     "medicationName": "Medication name",
     "dose": "Dose",
-    "unit": "Unit(s)",
+    "unit": "Unit",
     "notes": "Notes",
     "addYourNotesHere": "Add your notes here",
     "doYouWantToSetReminder": "Do you want to set reminder?",
@@ -187,5 +187,21 @@
     "medication": "Medication",
     "setupMedication": "Setup medication",
     "setupNow":"Setup now",
-    "noMedication": "No medication"
+    "noMedication": "No medication",
+    "selectAForm": "Select a form", 
+    "application":"Application",
+    "cap" : "Cap",
+    "drop" : "Drop",
+    "gram": "Gram",
+    "injection": "Injection",
+    "miligram": "Miligram",
+    "mililiter": "Mililiter",
+    "packet": "Packet",
+    "patch": "Patch",
+    "piece": "Piece",
+    "pill": "Pill",
+    "puff": "Puff",
+    "spoon": "Spoon",
+    "spray": "Spray",
+    "suppository": "Suppository"
 }
