Add logic medication

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -203,5 +203,6 @@
     "puff": "Puff",
     "spoon": "Spoon",
     "spray": "Spray",
-    "suppository": "Suppository"
+    "suppository": "Suppository",
+    "pleaseAddRemindTime": "Please add remind time."
 }
