Create smooth home screen

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -204,5 +204,6 @@
     "spoon": "Spoon",
     "spray": "Spray",
     "suppository": "Suppository",
-    "pleaseAddRemindTime": "Please add remind time."
+    "pleaseAddRemindTime": "Please add remind time.",
+    "yourFetalInformationCannot": "Your fetal information cannot be determined"
 }
